--- a/MapApp/Base.lproj/Main.storyboard
+++ b/MapApp/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MapApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,36 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="aHe-vQ-OHL">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="400"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fts-f3-g9m">
+                                <rect key="frame" x="231" y="460" width="139" height="30"/>
+                                <state key="normal" title="Get Current location"/>
+                                <connections>
+                                    <action selector="btnLocationACT:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M5Z-bL-hgB"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aHe-vQ-OHL" secondAttribute="trailing" id="Qs1-0j-R7K"/>
+                            <constraint firstItem="aHe-vQ-OHL" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="UrR-wc-XjO"/>
+                            <constraint firstItem="Fts-f3-g9m" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zbd-6c-teE"/>
+                            <constraint firstItem="Fts-f3-g9m" firstAttribute="top" secondItem="aHe-vQ-OHL" secondAttribute="bottom" constant="60" id="o3Q-nx-gZa"/>
+                            <constraint firstItem="aHe-vQ-OHL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rkA-Vu-CRH"/>
+                            <constraint firstItem="aHe-vQ-OHL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uCc-TB-tGI"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="MapView" destination="aHe-vQ-OHL" id="0K8-bO-nzz"/>
+                        <outlet property="btnLocation" destination="Fts-f3-g9m" id="Xjy-YH-9Go"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="405" y="350"/>
         </scene>
     </scenes>
 </document>
